# chimera

./: ANTI_BOT_RULEBOOK_ANALYSIS.md  AURA_LITE_IMPLEMENTATION_GUIDE.md  CHIMERA-ULTIMATE_INTEGRATION_DOCUMENTATION.md  CHIMERA-ULTIMATE_REFINEMENTS_SUMMARY.md  CHIMERA_ULTIMATE_COMPLETE_ANALYSIS_GUIDE.md  CHIMERA_ULTIMATE_STATUS_UPDATE_AND_ROADMAP.md  CHIMERA_ULTIMATE_TESTING_HARNESS_DOCUMENTATION.md  CHIMERA_ULTIMATE_TESTING_HARNESS_STRATEGIC_ALIGNMENT_ANALYSIS.md  COMPREHENSIVE_KNOWLEDGE_STATUS_UPDATE.md  COMPREHENSIVE_SCRAPER_STRATEGIC_ANALYSIS.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  CRITICAL_IMPLEMENTATION_GUIDE.md  DATADOME_CAPTCHA_REVERSE_ENGINEERING_FINDINGS.md  DECONFUSCATION_ROADMAP.md  EXACT_MIRRORING_IMPLEMENTATION_ROADMAP.md  FINAL_SCRAPING_CAPABILITIES_VALIDATION.md  IMMEDIATE_STRATEGIC_ALIGNMENT_ACTIONS.md  IMMEDIATE_STRATEGIC_ALIGNMENT_ACTIONS_COMPLETED.md  IMPLEMENTATION_SUMMARY.md  MOST RECENT STATUS UPDATE.md  RAPID_IMPROVEMENT_DRIVE_EXPLANATION.md  STRATEGIC_CODE_ANALYSIS.md  SYSTEMATIC_PUZZLE_ANALYSIS_STRATEGY.md  actual_data_collection_report_20250831_220226.json  anti_playwright_bypass_scraper.py  breakthrough_iframe_bypass.py  captcha1.html  captcha2.js  captcha3.js  captchaHTML.md  chimera-ultimate.py  chimera_ultimate_critical_fixes.py  chimera_ultimate_critical_fixes_report_20250831_170444.md  chimera_ultimate_optimization.py  chimera_ultimate_post_movement_fix.py  chimera_ultimate_testing_harness.py  complete_scraping_test_report_20250831_214524.json  comprehensive_testing_script.py  debug_evaluate.py  debug_iframe_evaluate.py  (+23 more)
(+299 files in other folders)
